fix header on mobile

--- a/style.css
+++ b/style.css
@@ -143,6 +143,9 @@ header * {
   .grid {
     grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   }
+  .titlecard p {
+    display: none;
+  }
 }
 
 #titlecard{
